fixed build issue and overlaping on team page

--- a/src/components/aboutUsPage/style.css
+++ b/src/components/aboutUsPage/style.css
@@ -106,9 +106,10 @@
     flex-wrap: wrap;
     width: 90%;
     margin: 0 auto;
-    overflow: hiddsen;
+    /* overflow: hidden; */
     font-family: sans-serif;
     list-style-type: none;
+    /* padding-bottom: calc(20% - 1%); */
 }
 
 .hex {
@@ -391,7 +392,7 @@
 
     /* <- 5-4  hexagons per row */
     #hexGrid {
-        padding-bottom: 4.4%
+        padding-bottom: calc(20% - 6%);
     }
 
     .hex {
@@ -410,7 +411,7 @@
 
     /* <- 4-3  hexagons per row */
     #hexGrid {
-        padding-bottom: 5.5%;
+        padding-bottom: calc(25% - 10%);
         font-size: 13px;
     }
 
@@ -430,7 +431,7 @@
 
     /* <- 3-2  hexagons per row */
     #hexGrid {
-        padding-bottom: 7.4%;
+        padding-bottom: calc(33.333% - 10%);
         font-size: 14px;
     }
 
@@ -450,7 +451,7 @@
 
     /* <- 2-1  hexagons per row */
     #hexGrid {
-        padding-bottom: 11.2%;
+        padding-bottom: calc(50% - 10%);
         font-size: 12px;
     }
 
